fix dropdown overlapped issue

--- a/scss/components/dropdown-list/_dropdown-list.scss
+++ b/scss/components/dropdown-list/_dropdown-list.scss
@@ -4,15 +4,10 @@
 $dropdown-list-default-skin: default !default;
 $dropdown-list-default-size: small !default;
 
-
-@include placeholder(dropdown-list-expanded){
-	z-index: 4;
-}
-
 @include placeholder(dropdown-list-base){
 	list-style-type: none;
 	width: 100%;
-	z-index: 3;	
+	z-index: 999;	
 }
 
 @include placeholder(dropdown-list-option-base){
@@ -45,7 +40,6 @@ $dropdown-list-default-size: small !default;
 		@extend %dropdown-list-#{$skin}-skin;		
 
 		&.in-active-state{
-			@extend %dropdown-list-expanded;
 			@extend %dropdown-list-expanded-#{$skin}-skin;			
 		}
 	}
